syntax = "proto3";

package dni;

message OnnxTaskOptions {
    string model_path = 1;
}
